Make sure all of top navbar is always visible when de-sizing window

--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -2,7 +2,7 @@
     position: fixed;
 	top: 0;
     width: 100%;
-    height: 85px;
+    height: 6rem;
     display: flex;
     align-items: center;
     justify-content: center;
