--- a/assets/css/components/top-navbar.css
+++ b/assets/css/components/top-navbar.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
 	gap: 2.2rem;
-	top: 85px;
+	top: 6rem;
 	padding-left: 0;
 	margin: 0;
 	background-color: white;
@@ -24,7 +24,7 @@
     white-space: nowrap;
 	height: 5.2rem;
     display: inline-block;
-    padding-top: 3vh;
+    padding-top: 2rem;
     padding-left: 20px;
     padding-right: 20px;
     margin-top: -1.4vh;
