--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -8,7 +8,7 @@
 }
 
 html, body {
-	font-size: clamp(0.7rem, calc(0.5vw + 0.5vh), 1rem);
+	font-size: clamp(0rem, calc(0.5vw + 0.5vh), 1rem);
     margin: 0;
 }
 
